--- a/modules/planning/common/speed/BUILD
+++ b/modules/planning/common/speed/BUILD
@@ -30,6 +30,7 @@ cc_library(
         "//external:gflags",
         "//modules/common/math",
         "//modules/common/proto:pnc_point_proto",
+        "//modules/common/util",
         "//modules/planning/common:planning_gflags",
         "//modules/planning/common:planning_util",
         "//modules/planning/math:double",
