Fix proto compilation.

--- a/modules/map/proto/BUILD
+++ b/modules/map/proto/BUILD
@@ -2,12 +2,16 @@ load("//tools:cpplint.bzl", "cpplint")
 
 package(default_visibility = ["//visibility:public"])
 
-load("@org_pubref_rules_protobuf//cpp:rules.bzl", "cc_proto_library")
-load("@org_pubref_rules_protobuf//python:rules.bzl", "py_proto_compile")
-
 cc_proto_library(
     name = "map_proto",
-    protos = [
+    deps = [
+        ":map_proto_lib",
+    ],
+)
+
+proto_library(
+    name = "map_proto_lib",
+    srcs = [
         "map.proto",
         "map_clear_area.proto",
         "map_crosswalk.proto",
@@ -24,31 +28,7 @@ cc_proto_library(
         "map_yield_sign.proto",
     ],
     deps = [
-        "//modules/common/proto:common_proto",
+        "//modules/common/proto:common_proto_lib",
     ],
 )
-
-py_proto_compile(
-    name = "map_proto_pylib",
-    protos = [
-        "map.proto",
-        "map_clear_area.proto",
-        "map_crosswalk.proto",
-        "map_geometry.proto",
-        "map_id.proto",
-        "map_junction.proto",
-        "map_lane.proto",
-        "map_overlap.proto",
-        "map_parking_space.proto",
-        "map_road.proto",
-        "map_signal.proto",
-        "map_speed_bump.proto",
-        "map_stop_sign.proto",
-        "map_yield_sign.proto",
-    ],
-    deps = [
-        "//modules/common/proto:common_proto_pylib",
-    ],
-)
-
 cpplint()
