--- a/modules/perception/lib/config_manager/proto/BUILD
+++ b/modules/perception/lib/config_manager/proto/BUILD
@@ -1,10 +1,15 @@
 package(default_visibility = ["//visibility:public"])
 
-load("@org_pubref_rules_protobuf//cpp:rules.bzl", "cc_proto_library")
-
 cc_proto_library(
     name = "config_proto",
-    protos = [
+    deps = [
+        ":config_proto_lib",
+    ],
+)
+
+proto_library(
+    name = "config_proto_lib",
+    srcs = [
         "config_schema.proto",
     ],
 )
