--- a/modules/prediction/proto/BUILD
+++ b/modules/prediction/proto/BUILD
@@ -1,55 +1,90 @@
 package(default_visibility = ["//visibility:public"])
 
-load("@org_pubref_rules_protobuf//cpp:rules.bzl", "cc_proto_library")
-load("@org_pubref_rules_protobuf//python:rules.bzl", "py_proto_compile")
-
 cc_proto_library(
     name = "prediction_conf_proto",
-    protos = [
+    deps = [
+        ":prediction_conf_proto_lib",
+    ],
+)
+
+proto_library(
+    name = "prediction_conf_proto_lib",
+    srcs = [
         "prediction_conf.proto",
     ],
     deps = [
-        "//modules/common/proto:common_proto",
-        "//modules/perception/proto:perception_proto",
+        "//modules/common/proto:common_proto_lib",
+        "//modules/perception/proto:perception_proto_lib",
     ],
 )
 
 cc_proto_library(
     name = "prediction_proto",
-    protos = [
+    deps = [
+        ":prediction_proto_lib",
+    ],
+)
+
+proto_library(
+    name = "prediction_proto_lib",
+    srcs = [
         "prediction_obstacle.proto",
     ],
     deps = [
-        "//modules/common/proto:common_proto",
-        "//modules/common/proto:pnc_point_proto",
-        "//modules/perception/proto:perception_proto",
+        "//modules/common/proto:common_proto_lib",
+        "//modules/common/proto:header_proto_lib",
+        "//modules/common/proto:error_code_proto_lib",
+        "//modules/common/proto:pnc_point_proto_lib",
+        "//modules/perception/proto:perception_proto_lib",
     ],
 )
 
 cc_proto_library(
     name = "lane_graph_proto",
-    protos = [
-        "lane_graph.proto",
-    ],
     deps = [
-        "//modules/common/proto:common_proto",
+        ":lane_graph_proto_lib",
     ],
 )
 
+proto_library(
+    name = "lane_graph_proto_lib",
+    srcs = [
+        "lane_graph.proto",
+    ],
+    deps = [
+        "//modules/common/proto:common_proto_lib",
+    ],
+)
+
+
 cc_proto_library(
     name = "feature_proto",
-    protos = [
+    deps = [
+        ":feature_proto_lib",
+    ],
+)
+
+proto_library(
+    name = "feature_proto_lib",
+    srcs = [
         "feature.proto",
     ],
     deps = [
-        "//modules/common/proto:common_proto",
-        "//modules/prediction/proto:lane_graph_proto",
+        "//modules/common/proto:common_proto_lib",
+        "//modules/prediction/proto:lane_graph_proto_lib",
     ],
 )
 
 cc_proto_library(
     name = "fnn_model_base_proto",
-    protos = [
+    deps = [
+        ":fnn_model_base_proto_lib",
+    ],
+)
+
+proto_library(
+    name = "fnn_model_base_proto_lib",
+    srcs = [
         "fnn_model_base.proto",
     ],
     deps = [
@@ -58,32 +93,17 @@ cc_proto_library(
 
 cc_proto_library(
     name = "fnn_vehicle_model_proto",
-    protos = [
-        "fnn_vehicle_model.proto",
-    ],
     deps = [
-        "//modules/prediction/proto:fnn_model_base_proto",
+        ":fnn_vehicle_model_proto_lib",
     ],
 )
 
-py_proto_compile(
-    name = "prediction_proto_pylib",
-    protos = [
-        "prediction_obstacle.proto",
-    ],
-    deps = [
-        "//modules/common/proto:common_proto_pylib",
-        "//modules/perception/proto:perception_proto_pylib",
-    ],
-)
-
-py_proto_compile(
-    name = "prediction_model_proto_pylib",
-    protos = [
-        "fnn_model_base.proto",
+proto_library(
+    name = "fnn_vehicle_model_proto_lib",
+    srcs = [
         "fnn_vehicle_model.proto",
     ],
     deps = [
-        "//modules/common/proto:common_proto_pylib",
-    ]
+        "//modules/prediction/proto:fnn_model_base_proto_lib",
+    ],
 )
