--- a/modules/routing/proto/BUILD
+++ b/modules/routing/proto/BUILD
@@ -1,28 +1,21 @@
 package(default_visibility = ["//visibility:public"])
 
-load("@org_pubref_rules_protobuf//cpp:rules.bzl", "cc_proto_library")
-load("@org_pubref_rules_protobuf//python:rules.bzl", "py_proto_compile")
-
 cc_proto_library(
     name = "routing_proto",
-    protos = [
-        "routing.proto",
-        "topo_graph.proto",
-    ],
     deps = [
-        "//modules/common/proto:common_proto",
-        "//modules/map/proto:map_proto",
+        ":routing_proto_lib",
     ],
 )
 
-py_proto_compile(
-    name = "routing_proto_pylib",
-    protos = [
+proto_library(
+    name = "routing_proto_lib",
+    srcs = [
         "routing.proto",
         "topo_graph.proto",
     ],
     deps = [
-        "//modules/common/proto:common_proto_pylib",
-        "//modules/map/proto:map_proto_pylib",
+        "//modules/common/proto:common_proto_lib",
+        "//modules/common/proto:header_proto_lib",
+        "//modules/map/proto:map_proto_lib",
     ],
 )
