--- a/WORKSPACE.in
+++ b/WORKSPACE.in
@@ -40,97 +40,6 @@ new_http_archive(
     url = "https://github.com/google/benchmark/archive/v1.1.0.tar.gz",
 )
 
-# proto rules (Protobuf and GRPC)
-http_archive(
-    name = "org_pubref_rules_protobuf",
-    sha256 = "646b39438d8eeba02d9af890dee444c7e4e9d08ae8611bc0e0621257010162db",
-    strip_prefix = "rules_protobuf-0.7.1",
-    url = "https://github.com/pubref/rules_protobuf/archive/v0.7.1.tar.gz",
-)
-
-load("@org_pubref_rules_protobuf//cpp:rules.bzl", "cpp_proto_repositories")
-
-cpp_proto_repositories(
-    lang_deps = {
-        # Grpc repo is required by multiple languages but we put it here.
-        "com_github_grpc_grpc": {
-            "rule": "git_repository",
-            "remote": "https://github.com/grpc/grpc.git",
-            "init_submodules": True,
-            "commit": "3808b6efe66b87269d43847bc113e94e2d3d28fb",
-            #"tag": "v1.0.1",
-        },
-
-        # Hooray! The boringssl team provides a "chromium-stable-with-bazel" branch
-        # with all BUILD files ready to go.
-        "boringssl": {
-            "rule": "http_archive",
-            "url": "https://github.com/wanglei828/third-party/raw/master/chromium-stable-with-bazel.zip",
-        },
-
-        # libssl is required for c++ grpc where it is expected in
-        # //external:libssl.  This can be either boringssl or openssl.
-        "libssl": {
-            "rule": "bind",
-            "actual": "@boringssl//boringssl-chromium-stable-with-bazel:ssl",
-        },
-
-        # C-library for zlib
-        "com_github_madler_zlib": {
-            "rule": "new_git_repository",
-            "remote": "https://github.com/madler/zlib",
-            "tag": "v1.2.8",
-            "build_file": "third_party/com_github_madler_zlib.BUILD",
-        },
-
-        # grpc++ expects //external:zlib
-        "zlib": {
-            "rule": "bind",
-            "actual": "@com_github_madler_zlib//:zlib",
-        },
-
-        # grpc++ expects "//external:protobuf_clib"
-        "protobuf_clib": {
-            "rule": "bind",
-            "actual": "@com_github_google_protobuf//:protobuf",
-        },
-
-        # grpc++ expects //external:nanopb
-        "nanopb": {
-            "rule": "bind",
-            "actual": "@com_github_grpc_grpc//third_party/nanopb",
-        },
-
-        # Bind the executable cc_binary grpc plugin into
-        # //external:protoc_gen_grpc_cpp.  Expects
-        # //external:protobuf_compiler. TODO: is it really necessary to
-        # bind it in external?
-        "protoc_gen_grpc_cpp": {
-            "rule": "bind",
-            "actual": "@com_github_grpc_grpc//:grpc_cpp_plugin",
-        },
-
-        # Bind the protobuf proto_lib into //external.  Required for
-        # compiling the protoc_gen_grpc plugin
-        "protobuf_compiler": {
-            "rule": "bind",
-            "actual": "@com_github_google_protobuf//:protoc_lib",
-        },
-
-        # GTest is for our own internal cc tests.
-        "gtest": {
-            "rule": "new_git_repository",
-            "remote": "https://github.com/google/googletest.git",
-            "commit": "ed9d1e1ff92ce199de5ca2667a667cd0a368482a",
-            "build_file": "third_party/protobuf_gtest.BUILD",
-        },
-    },
-)
-
-load("@org_pubref_rules_protobuf//python:rules.bzl", "py_proto_repositories")
-
-py_proto_repositories()
-
 # cpplint from google style guide
 new_git_repository(
     name = "google_styleguide",
@@ -263,4 +172,16 @@ new_http_archive(
     url = "https://github.com/leethomason/tinyxml2/archive/5.0.1.zip",
     build_file = "third_party/tinyxml2.BUILD",
     strip_prefix = "tinyxml2-5.0.1",
+)
+
+http_archive(
+    name = "com_google_protobuf",
+    url = "https://github.com/google/protobuf/releases/download/v3.3.0/protobuf-cpp-3.3.0.tar.gz",
+    strip_prefix = "protobuf-3.3.0",
+)
+
+http_archive(
+    name = "com_google_protobuf_cc",
+    url = "https://github.com/google/protobuf/releases/download/v3.3.0/protobuf-cpp-3.3.0.tar.gz",
+    strip_prefix = "protobuf-3.3.0",
 )
