--- a/modules/control/controller/BUILD
+++ b/modules/control/controller/BUILD
@@ -91,6 +91,7 @@ cc_library(
         "//modules/common/util:factory",
         "//modules/control/proto:control_proto",
         "//modules/planning/proto:planning_proto",
+        "@ros//:ros_common",
     ],
 )
 
