--- a/modules/control/proto/BUILD
+++ b/modules/control/proto/BUILD
@@ -1,27 +1,15 @@
 package(default_visibility = ["//visibility:public"])
 
-load("@org_pubref_rules_protobuf//cpp:rules.bzl", "cc_proto_library")
-load("@org_pubref_rules_protobuf//python:rules.bzl", "py_proto_compile")
-
 cc_proto_library(
     name = "control_proto",
-    protos = [
-        "calibration_table.proto",
-        "control_cmd.proto",
-        "control_conf.proto",
-        "lat_controller_conf.proto",
-        "lon_controller_conf.proto",
-        "pad_msg.proto",
-    ],
     deps = [
-        "//modules/canbus/proto:canbus_proto",
-        "//modules/common/proto:common_proto",
+        ":control_proto_lib",
     ],
 )
 
-py_proto_compile(
-    name = "control_proto_pylib",
-    protos = [
+proto_library(
+    name = "control_proto_lib",
+    srcs = [
         "calibration_table.proto",
         "control_cmd.proto",
         "control_conf.proto",
@@ -30,7 +18,9 @@ py_proto_compile(
         "pad_msg.proto",
     ],
     deps = [
-        "//modules/canbus/proto:canbus_proto_pylib",
-        "//modules/common/proto:common_proto_pylib",
+        "//modules/canbus/proto:canbus_proto_lib",
+        "//modules/common/proto:common_proto_lib",
+        "//modules/common/proto:header_proto_lib",
+        "//modules/common/proto:vehicle_signal_proto_lib",
     ],
 )
