--- a/modules/perception/obstacle/lidar/segmentation/cnnseg/proto/BUILD
+++ b/modules/perception/obstacle/lidar/segmentation/cnnseg/proto/BUILD
@@ -1,10 +1,15 @@
 package(default_visibility = ["//visibility:public"])
 
-load("@org_pubref_rules_protobuf//cpp:rules.bzl", "cc_proto_library")
-
 cc_proto_library(
     name = "cnnseg_proto",
-    protos = [
+    deps = [
+        ":cnnseg_proto_lib"
+    ]
+)
+
+proto_library(
+    name = "cnnseg_proto_lib",
+    srcs = [
         "cnnseg.proto"
     ]
 )
