added PlanningTestBase to make integration tests easier

--- a/modules/planning/optimizer/dp_st_speed/BUILD
+++ b/modules/planning/optimizer/dp_st_speed/BUILD
@@ -75,7 +75,7 @@ cc_test(
     ],
     deps = [
         ":dp_st_graph",
-        "//modules/planning/optimizer:optimizer_test_base",
+        "//modules/planning/integration_tests:planning_test_base",
         "@gtest//:main",
     ],
 )
