clean up routing 2

--- a/modules/routing/conf/adapter.conf
+++ b/modules/routing/conf/adapter.conf
@@ -1,25 +1,10 @@
 config {
-  type: LOCALIZATION
+  type: ROUTING_REQUEST
   mode: RECEIVE_ONLY
   message_history_limit: 10
 }
 config {
-  type: PAD
-  mode: RECEIVE_ONLY
-  message_history_limit: 10
-}
-config {
-  type: PLANNING_TRAJECTORY
-  mode: RECEIVE_ONLY
-  message_history_limit: 10
-}
-config {
-  type: CHASSIS
-  mode: RECEIVE_ONLY
-  message_history_limit: 10
-}
-config {
-  type: CONTROL_COMMAND
+  type: ROUTING
   mode: PUBLISH_ONLY
 }
 config {
