[perception] add hdmap_roi_filter and cnn_segmentation for lidar_process (#342)
* add hdmap_roi_filter and cnn_segmentation for lidar_process

* add HdmapROIFilter register

--- a/modules/perception/obstacle/onboard/BUILD
+++ b/modules/perception/obstacle/onboard/BUILD
@@ -33,7 +33,8 @@ cc_library(
         "//modules/perception/obstacle/base:perception_obstacle_base",
         "//modules/perception/obstacle/lidar/dummy:perception_obstacle_lidar_dummy",
         "//modules/perception/obstacle/lidar/interface:perception_obstacle_lidar_interface",
-# "//modules/perception/obstacle/lidar/segmentation/cnnseg:perception_obstacle_lidar_segmention_cnnseg",
+        "//modules/perception/obstacle/lidar/roi_filter/hdmap_roi_filter:hdmap_roi_filter",
+        "//modules/perception/obstacle/lidar/segmentation/cnnseg:perception_obstacle_lidar_segmention_cnnseg",
         "//modules/perception/obstacle/lidar/object_builder/min_box:perception_obstacle_lidar_object_builder_min_box",
         "//modules/perception/obstacle/lidar/tracker/hm_tracker:perception_obstacle_lidar_tracker_hm_tracker",
         "@eigen//:eigen",
