--- a/modules/perception/conf/perception.conf
+++ b/modules/perception/conf/perception.conf
@@ -1,4 +1,14 @@
+####################################################################
+# Flags from modules/common/adapters/adapter_manager.cc
+# The adapter config path file.
+# type: string
+# default:
 --adapter_config_path=modules/perception/conf/adapter.conf
+
+# The pointcloud topic name.
+# type: string
+# default: /sensor/velodyne64/compensator/PointCloud2
+--pointcloud_topic=/sensor/velodyne64/compensator/PointCloud2
 
 ####################################################################
 # Flags from lib/config_manager/config_manager.cc
@@ -39,22 +49,22 @@
 # roi filter before GroundDetector.
 # type: string
 # candidate: DummyROIFilter, HdmapROIFilter
---onboard_roi_filter=DummyROIFilter
+--onboard_roi_filter=HdmapROIFilter
 
 # the segmentation algorithm for onboard
 # type: string
 # candidate: DummySegmentation, CNNSegmentation
---onboard_segmentor=DummySegmentation
+--onboard_segmentor=CNNSegmentation
 
 # the object build algorithm for onboard
 # type: string
 # candidate: DummyObjectBuilder, MinBoxObjectBuilder
---onboard_object_builder=DummyObjectBuilder
+--onboard_object_builder=MinBoxObjectBuilder
 
 # the tracking algorithm for onboard
 # type: string
 # candidate: DummyTracker, HmObjectTracker
---onboard_tracker=DummyTracker
+--onboard_tracker=HmObjectTracker
 
 # the perception module's output topic name.
 # type: string
