move trajectory_point_collector to util (#348)

--- a/modules/dreamview/backend/simulation_world/BUILD
+++ b/modules/dreamview/backend/simulation_world/BUILD
@@ -3,34 +3,6 @@ load("//tools:cpplint.bzl", "cpplint")
 package(default_visibility = ["//visibility:public"])
 
 cc_library(
-    name = "trajectory_point_collector",
-    srcs = [
-        "trajectory_point_collector.cc",
-    ],
-    hdrs = [
-        "trajectory_point_collector.h",
-    ],
-    deps = [
-        "//modules/common/configs:vehicle_config_helper",
-        "//modules/common/math",
-        "//modules/dreamview/proto:simulation_world_proto",
-        "//modules/planning/proto:planning_proto",
-    ],
-)
-
-cc_test(
-    name = "trajectory_point_collector_test",
-    size = "small",
-    srcs = [
-        "trajectory_point_collector_test.cc",
-    ],
-    deps = [
-        ":trajectory_point_collector",
-        "@gtest//:main",
-    ],
-)
-
-cc_library(
     name = "simulation_world_service",
     srcs = [
         "simulation_world_service.cc",
@@ -39,13 +11,13 @@ cc_library(
         "simulation_world_service.h",
     ],
     deps = [
-        ":trajectory_point_collector",
         "//modules/canbus/proto:canbus_proto",
         "//modules/common:log",
         "//modules/common/adapters:adapter_manager",
         "//modules/common/math:quaternion",
         "//modules/common/proto:common_proto",
         "//modules/dreamview/backend/map:map_service",
+        "//modules/dreamview/backend/util:trajectory_point_collector",
         "//modules/dreamview/proto:simulation_world_proto",
         "//modules/localization/proto:localization_proto",
         "//modules/planning/proto:planning_proto",
