remove the prediction_trajectory class

--- a/modules/planning/optimizer/dp_poly_path/BUILD
+++ b/modules/planning/optimizer/dp_poly_path/BUILD
@@ -20,6 +20,7 @@ cc_library(
         "//modules/common/status",
         "//modules/map/proto:map_proto",
         "//modules/planning/common:decision_data",
+        "//modules/planning/common:frame",
         "//modules/planning/common:obstacle",
         "//modules/planning/common:planning_gflags",
         "//modules/planning/common/path:path_data",
