[perception] Add bazel build for Caffe

--- a/modules/perception/conf/BUILD
+++ b/modules/perception/conf/BUILD
@@ -12,5 +12,6 @@ filegroup(
     srcs = [
         "config_manager.config",
         "perception.conf",
+        "hdmap_roi_filter.conf",
     ],
 )
