1. immigrate routing; 2. fix pnc map (#381)

--- a/modules/map/pnc_map/BUILD
+++ b/modules/map/pnc_map/BUILD
@@ -14,6 +14,7 @@ cc_library(
         "//modules/common/math",
         "//modules/map/hdmap",
         "//modules/map/proto:map_proto",
+        "//modules/routing/proto:routing_proto",
     ],
 )
 
