--- a/modules/common/adapters/BUILD
+++ b/modules/common/adapters/BUILD
@@ -84,6 +84,7 @@ cc_library(
         "//modules/localization/proto:gps_proto",
         "//modules/localization/proto:imu_proto",
         "//modules/localization/proto:localization_proto",
+        "//modules/routing/proto:routing_proto",
         "//modules/map/proto:map_proto",
         "//modules/perception/proto:perception_proto",
         "//modules/planning/proto:planning_proto",
