add timer for perception,and modify hdmap_roi_config file path (#385)
* add timer for perception

* merge conflict

--- a/modules/perception/lib/base/BUILD
+++ b/modules/perception/lib/base/BUILD
@@ -7,11 +7,13 @@ cc_library(
     srcs = [
         "file_util.cc",
         "registerer.cc",
+        "timer.cc",
     ],
     hdrs = [
         "file_util.h",
         "registerer.h",
         "singleton.h",
+        "timer.h",
     ],
     linkopts = [
         "-lboost_filesystem",
