added test for st_graph_boundary, exit when path length is smaller than reference line length. (#395)
* added test for st_graph_boundary

* exit when path length is smaller than reference line length.

* fixed compilation error.

--- a/modules/planning/optimizer/st_graph/BUILD
+++ b/modules/planning/optimizer/st_graph/BUILD
@@ -94,4 +94,19 @@ cc_library(
     ],
 )
 
+cc_test(
+    name = "st_graph_boundary_test",
+    size = "small",
+    srcs = [
+        "st_graph_boundary_test.cc",
+    ],
+    deps = [
+        ":st_graph_boundary",
+        "//modules/common:log",
+        "//modules/common/time",
+        "//modules/common/util",
+        "@gtest//:main",
+    ],
+)
+
 cpplint()
