Add route display to frontend

--- a/modules/dreamview/frontend/src/store/config/parameters.yml
+++ b/modules/dreamview/frontend/src/store/config/parameters.yml
@@ -27,6 +27,7 @@ options:
     showDecision: true
     showPredictionMajor: true
     showPredictionMinor: true
+    showRouting: true
 debug:
   # Turn this on for monitor related debugging
   autoMonitorMessage: false
