Use StrCat to join diverse data types to string. (#406)

--- a/modules/planning/math/curve1d/BUILD
+++ b/modules/planning/math/curve1d/BUILD
@@ -30,6 +30,7 @@ cc_library(
     deps = [
         ":polynomial_curve1d",
         "//modules/common:log",
+        "//modules/common/util:string_util",
     ],
 )
 
@@ -44,6 +45,7 @@ cc_library(
     deps = [
         ":polynomial_curve1d",
         "//modules/common:log",
+        "//modules/common/util:string_util",
     ],
 )
 
