push opengl visualizer (#403)
* docker file changes

* change docker version

* adding opengl visualizer

* based on code review comments

--- a/WORKSPACE.in
+++ b/WORKSPACE.in
@@ -194,6 +194,23 @@ new_local_repository(
 )
 
 new_local_repository(
+    name = "glew",
+    build_file = "third_party/glew.BUILD",
+    path = "/usr/include",
+)
+
+new_local_repository(
+    name = "opengl",
+    build_file = "third_party/opengl.BUILD",
+    path = "/usr/include",
+)
+new_local_repository(
+    name = "glfw",
+    build_file = "third_party/glfw.BUILD",
+    path = "/usr/include",
+)
+
+new_local_repository(
     name = "vtk",
     build_file = "third_party/vtk.BUILD",
     path = "/usr/include/vtk-5.8",
