--- a/modules/perception/tool/conf/config_manager.config
+++ b/modules/perception/tool/conf/config_manager.config
@@ -1,13 +1,2 @@
-model_config_path: "./conf/ground_detector.config"
-model_config_path: "./conf/segmentation.config"
-model_config_path: "./conf/ncut.config"
-model_config_path: "./conf/ncut_segmentation.config"
-model_config_path: "./conf/rdf_segmentation.config"
-model_config_path: "./conf/classifier.config"
-model_config_path: "./conf/tracker.config"
-model_config_path: "./conf/adh_filter.config"
-model_config_path: "./conf/multiregion_grd.config"
-model_config_path: "./data/models/static_roi_filter.config"
-model_config_path: "./data/models/track_classifier.config"
-model_config_path: "./data/models/mb_tracker.config"
-model_config_path: "./data/models/cnn_segmentation.config"
+model_config_path: "model/tracker.config"
+model_config_path: "model/cnn_segmentation.config"
