--- a/modules/planning/optimizer/dp_poly_path/BUILD
+++ b/modules/planning/optimizer/dp_poly_path/BUILD
@@ -17,7 +17,7 @@ cc_library(
         "//modules/common/math",
         "//modules/common/status",
         "//modules/map/proto:map_proto",
-        "//modules/planning/common:decision_data",
+        "//modules/planning/common:path_decision",
         "//modules/planning/common:frame",
         "//modules/planning/common:obstacle",
         "//modules/planning/common:planning_gflags",
