--- a/modules/planning/optimizer/dp_st_speed/BUILD
+++ b/modules/planning/optimizer/dp_st_speed/BUILD
@@ -33,7 +33,7 @@ cc_library(
         "//modules/common/proto:common_proto",
         "//modules/common/proto:pnc_point_proto",
         "//modules/common/status",
-        "//modules/planning/common:decision_data",
+        "//modules/planning/common:path_decision",
         "//modules/planning/common/speed:speed_data",
         "//modules/planning/optimizer/st_graph:st_graph_data",
         "//modules/planning/proto:planning_proto",
