--- a/modules/planning/optimizer/qp_spline_path/BUILD
+++ b/modules/planning/optimizer/qp_spline_path/BUILD
@@ -22,7 +22,7 @@ cc_library(
         "//modules/common/proto:pnc_point_proto",
         "//modules/common/util",
         "//modules/map/proto:map_proto",
-        "//modules/planning/common:decision_data",
+        "//modules/planning/common:path_decision",
         "//modules/planning/common:obstacle",
         "//modules/planning/common:planning_data",
         "//modules/planning/common:planning_gflags",
