--- a/WORKSPACE.in
+++ b/WORKSPACE.in
@@ -126,13 +126,6 @@ new_local_repository(
 )
 
 # Caffe
-# =====
-# This requires Caffe being installed in docker image.
-#new_local_repository(
-#    name = "caffe",
-#    build_file = "third_party/caffe.BUILD",
-#    path = "/third_party/caffe",
-#)
 new_http_archive(
     name = "caffe",
     build_file = "third_party/caffe.BUILD",
@@ -174,14 +167,9 @@ new_http_archive(
     strip_prefix = "tinyxml2-5.0.1",
 )
 
+#protobuf 3.3
 http_archive(
     name = "com_google_protobuf",
-    url = "https://github.com/google/protobuf/releases/download/v3.3.0/protobuf-cpp-3.3.0.tar.gz",
-    strip_prefix = "protobuf-3.3.0",
-)
-
-http_archive(
-    name = "com_google_protobuf_cc",
     url = "https://github.com/google/protobuf/releases/download/v3.3.0/protobuf-cpp-3.3.0.tar.gz",
     strip_prefix = "protobuf-3.3.0",
 )
