--- a/modules/dreamview/backend/simulation_world/BUILD
+++ b/modules/dreamview/backend/simulation_world/BUILD
@@ -22,7 +22,7 @@ cc_library(
         "//modules/localization/proto:localization_proto",
         "//modules/planning/proto:planning_proto",
         "//third_party/json",
-        "@com_google_protobuf_cc//:protobuf",
+        "@com_google_protobuf//:protobuf",
     ],
 )
 
@@ -56,7 +56,7 @@ cc_library(
         "//modules/dreamview/backend/common:dreamview_gflags",
         "//modules/dreamview/backend/map:map_service",
         "//modules/dreamview/backend/websocket",
-        "@com_google_protobuf_cc//:protobuf",
+        "@com_google_protobuf//:protobuf",
     ],
 )
 
